2894 [Main]                 moved menu items:
                            - "options\update" to "tools\update"
                            - "options\settings" to "options"
                            - "workers\settings" to "options"
                            - "workers\overview" to "view\worker overview"
2893 [OneClick]             fixed fatal error in some cases (regression of 2882). bug #937
2892 [AVS Script Creator]   added an option in the profile to use the DGIndexNV crop & resize filter if possible
                            if resize with DGIndexNV is enabled also cropping will be done that way (mod4 is forced for crop values)
                            fixed always applying the resize parameters to DGSource() (regression of 2891)
2891 [DGIndexNV Indexer]    fixed invalid input filter syntax (regression of 2890)
2890 [Settings]             added option to restrict input filters to 8 bit (enabled by default)
     [x264]                 fixed high bit depth support if ffmpeg is not used (regression of 2874)
2889 [Queue]                multiple "waiting" jobs can be assigned to a temporary worker to be processed
                            internal queue handling optimizations
2888 [Main]                 changed File\Exit shortcut from CTRL+X to ALT+F4
2887 [Worker]               improved the priority system so that for each job type the process and I/O priority can be defined
                            changing the priority in the progress window does change it only for the current job
                            moved some settings from options\settings to worker\settings (these will reset to default)
     [OneClick]             improved priority change and job abort actions
     [L-SMASH Indexer]      improved priority change and job abort actions
2886 [Jobs]                 fixed abort of suspended jobs (regression of 2818)
2885 [Preset Exporter]      fixed overwrite of output files
2884 [Worker]               changed worker handling